lists now may be null again