@@ -6,6 +6,7 @@ import dev.jwaters.hacknotts21.type.VoidType;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
+import java.util.Arrays;
 import java.util.List;
 
 public final class IfElseNode extends GraphNode<JPanel> {
@@ -50,7 +51,7 @@ public final class IfElseNode extends GraphNode<JPanel> {
 
     @Override
     public List<GraphNode<?>> getChildren() {
-        return condition != null ? List.of(condition, ifBody, elseBody) : List.of(ifBody, elseBody);
+        return Arrays.asList(condition, ifBody, elseBody);
     }
 
     @Nullable
