@@ -5,6 +5,7 @@ import dev.jwaters.hacknotts21.type.VoidType;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
+import java.util.Collections;
 import java.util.List;
 
 public final class SetVarNode extends GraphNode<JPanel> {
@@ -47,7 +48,7 @@ public final class SetVarNode extends GraphNode<JPanel> {
 
     @Override
     public List<GraphNode<?>> getChildren() {
-        return value != null ? List.of(value) : List.of();
+        return Collections.singletonList(value);
     }
 
     public String getVarName() {
